[FIX] web: form settings fields width on mobile
Before this commit, fields width didn't take all available space
on mobile.

Steps to reproduce:
- Go to website settings (for instance)
-> the width of the fields seems abnormally small

closes odoo/odoo#111934

X-original-commit: 49b3fed0ae9bbe43ea55ec5809f47a674a393e4d

--- a/addons/web/static/src/webclient/settings_form_view/settings_form_view.scss
+++ b/addons/web/static/src/webclient/settings_form_view/settings_form_view.scss
@@ -124,7 +124,9 @@
 
                .o_settings_container {
                    max-width: map-get($grid-breakpoints, lg); // Provide a maximum container size to ensure readability
-                   @include o-base-settings-horizontal-padding(0);
+                   @include media-breakpoint-up(md) {
+                        @include o-base-settings-horizontal-padding(0);
+                   }
                    margin-bottom: 24px;
                }
            }
